@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl configure.in for gnuplot on Unix.
 dnl
-dnl $Id: configure.in,v 1.274 2010/11/03 03:41:42 sfeam Exp $
+dnl $Id: configure.in,v 1.275 2010/11/14 00:06:53 sfeam Exp $
 dnl
 dnl this is actually major.minor ...
 dnl note that for a non-beta release, we need to
@@ -1087,6 +1087,19 @@ AM_CONDITIONAL(BUILD_WXWIDGETS, test "${enable_wxwidgets_ok}" = yes)
 
 dnl  End wxWidgets terminal
 
+dnl  Allow to disable terminals requiring bitmap support.
+dnl  NB: The copyright notice in bitmap.c is more restrictive
+dnl  than the overall gnuplot copyright.
+AC_ARG_WITH(bitmap_terminals,dnl
+[  --without-bitmap-terminals      dot-matrix printers and pbm],,
+  [test -z "${with_bitmap_terminals}" && with_bitmap_terminals=yes])
+if test "${with_bitmap_terminals}" != yes; then
+  AC_DEFINE(NO_BITMAP_SUPPORT,1,
+          [ Define to disable terminals that depend on code in bitmap.c ])
+fi
+AM_CONDITIONAL(BUILD_BITMAP, test "${with_bitmap_terminals}" = yes)
+
+
 AC_ARG_WITH(cairo,dnl
 [  --without-cairo      cairo-based terminals (default enabled)],,
   [test -z "${with_cairo}" && with_cairo=yes])
@@ -1229,12 +1242,22 @@ AC_MSG_RESULT([gnuplot will be compiled with the following terminals:])
 AC_MSG_RESULT([])
 
 AC_MSG_RESULT([  Standalone terminals: yes (always builtin)])
-AC_MSG_RESULT([    (canvas, cgm, corel, dumb, dxf, eepic, emf, emtex,])
-AC_MSG_RESULT([    epslatex, epson_180dpi, epson_60dpi, epson_lx800, fig, gpic, hp2623A,])
-AC_MSG_RESULT([    hp2648, hp500c, hpdj, hpgl, hpljii, hppj, imagen,])
-AC_MSG_RESULT([    latex, metafont, metapost, mif, pbm, postscript, pslatex, nec_cp6, okidata,])
-AC_MSG_RESULT([    pcl5, pstex, pstricks, qms, regis, svg, tandy_60dpi,])
-AC_MSG_RESULT([    tek40xx, tek410x, texdraw, tgif, tkcanvas, tpic, vttek)])
+AC_MSG_RESULT([    canvas, cgm, corel, dumb, dxf, eepic, emf, emtex,])
+AC_MSG_RESULT([    epslatex, fig, gpic, hp2623a, hp2648, hpgl, imagen,])
+AC_MSG_RESULT([    latex, metafont, metapost, mif, pcl5, postscript, pslatex,])
+AC_MSG_RESULT([    pstex, pstricks, qms, regis, svg,])
+AC_MSG_RESULT([    tek40xx, tek410x, texdraw, tgif, tkcanvas, tpic, vttek])
+AC_MSG_RESULT([])
+
+if test "$with_bitmap_terminals" == yes; then
+  AC_MSG_RESULT([  dot-matrix terminals: yes (disable using --without-bitmap-terminals])
+else
+  AC_MSG_RESULT([  dot-matrix terminals: no])
+fi
+AC_MSG_RESULT([    NB: copyright may restrict commercial use])
+AC_MSG_RESULT([    epson, nec, okidata, tandy, and seiko dp414 printers])
+AC_MSG_RESULT([    hp500c, hpdj, hpljii, hppj, pbm, starc])
+AC_MSG_RESULT([])
 
 if test "$no_x" != yes; then
   AC_MSG_RESULT([  X Window System terminal: yes])
